# demonstrations

./: .editorconfig  .env  .gitignore  .gitlab-ci.yml  .trivyignore  Demonstration.postman_collection.json  LICENSE  MANIFEST.in  README.md  bandit.yaml  build_image.sh  build_images.py  build_images.sh  check_license.py  demo_control.py  generate_ci_jobs.py  init_new_demo.sh  installer.bat  manage_demos.py  setup.cfg  setup.py
Demo Navigation/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
Neuer Ordner/: README.md  init_new_demo.sh
Password Demo/: Dockerfile
Phishing Demo/: Dockerfile  NativeAccessProvide.py  README.md  email.txt  fake arnazon.txt  fake doodle.txt  nativeaccessprovider.py  requirements.txt
Prototypes/: Demo_Concepts.docx  offene_Fragen.txt
ci/: push-navigation-image.sh  push-password-image.sh  push-phishing-image.sh
demoCA/: base.cnf  domains.cnf  eliteCA.crt  eliteCA.key  intermediateCA.crt  intermediateCA.key  mail.nimbus.de.crt  mail.nimbus.de.key  mailserver.cnf  nimbus.de.crt  rootCA.crt  rootCA.pem  rootCA.srl  server.crt  server.csr  sign_cert.py  smime_nina_hardt.crt  smime_nina_hardt.csr  smime_nina_hardt.key
demo_navigation/: Dockerfile  package-lock.json
demo_templates/: ci-yaml.template  orchestration-controller.template
demos/: demos.json
docs/: SUMMARY.md  add_demo.md  add_demo.rst  cert.md  cert.rst  elite_app.md  elite_app.rst  home.md  home.rst  issues.md  issues.rst  nativeapp.md  nativeapp.rst  nativeapp_api.md  wifi_demo.md  wifi_demo.rst
mdbook/: book.toml
native/: README.md  app.spec  (+5 more)
(+1040 files in other folders)
