[metadata]
name = nativeapp
author = Projekt ELITE
url = https://code.fbi.h-da.de/esc-mpse20/demonstrations
project_urls =
    Bug Tracker = https://code.fbi.h-da.de/esc-mpse20/demonstrations/-/issues
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
python_requires= >= 3.9
install_requires =
    python_on_whales >= 0.45.0
    flask
    flask_cors
    pyyaml
    importlib_resources
    pyautogui
    pillow
    cryptography
    pywin32
    wmi
    sqlalchemy
    pynput
    tk
setup_requires =
    babel


[options.package_data]
* = demos

[options.entry_points]
console_scripts =
    nativeapp = nativeapp.app:main
